--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <head>
   <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>SpryStore E-commerce Category Bootstrap Responsive Website Template | Home :: W3layouts</title>
+ <!--  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+  <title>SpryStore </title>
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-liberty.css">
   <!-- Template CSS -->
@@ -62,7 +62,7 @@ if(typeof _bsa !== 'undefined' && _bsa) {
    </script>
 <script async src='../../../../../../js/autotrack.js'></script>
 
-<meta name="robots" content="noindex">
+<!-- <meta name="robots" content="noindex"> -->
 <body>
 	<!-- Demo bar start -->
  <!--w3l-banner-slider-main-->
